tests/fixtures/esm/errors/missing_import/main.js
import { SaveButton } from './missing.js';

App.run({
    title: 'Missing Import Fixture',
    render: SaveButton
});
